<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <Button
        android:id="@+id/button_zacznij_zakupy"
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/zakupy_start"
        android:textSize="24dp"
        android:textAllCaps="true"
        android:tooltipText="@string/tooltip_zakupy_start"
        app:backgroundTint="#fc0"
        app:icon="@drawable/ic_add_shopping_cart_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stworz_liste"
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/stworz_liste"
        android:textSize="24dp"
        android:textAllCaps="true"
        android:tooltipText="@string/tooltip_stworz_liste"
        app:backgroundTint="#fc0"
        app:icon="@drawable/ic_addchart_24px"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_zacznij_zakupy" />

    <Button
        android:id="@+id/button_listy_zakupow"
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/listy_zakupow"
        android:textSize="24dp"
        android:textAllCaps="true"
        android:tooltipText="@string/tooltip_listy_zakupow"
        app:backgroundTint="#fc0"
        app:icon="@drawable/ic_pending_actions_24px"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_stworz_liste" />


    <TextView
        android:id="@+id/textView_tworcy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tworcy_rok_powstania"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>