<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigator_menu_navigation"
    app:startDestination="@+id/nav_zakupy_start">

    <fragment
        android:id="@+id/nav_zakupy_start"
        android:name="com.example.zakupiec_aplikacja_mobilna.ui.main_menu.MainMenuFragment"
        android:label="@string/zakupy_start"
        tools:layout="@layout/fragment_main_menu" />

    <fragment
        android:id="@+id/nav_stworz_liste"
        android:name="com.example.zakupiec_aplikacja_mobilna.ui.start_shopping.StartShoppingFragment"
        android:label="@string/stworz_liste"
        tools:layout="@layout/stworz_liste" />

    <fragment
        android:id="@+id/nav_listy_zakupów"
        android:name="com.example.zakupiec_aplikacja_mobilna.ui.show_lists.ShowListsFragment"
        android:label="@string/listy_zakupow"
        tools:layout="@layout/listy_zakupow" />
</navigation>