<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="16sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/product_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_centerInParent="false"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/product_quantity" />

    <TextView
        android:id="@+id/product_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_centerInParent="false"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@+id/product_amount"
        android:text="@string/product_unit" />

</RelativeLayout>